k8s/applications/homer/daemon-set.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: homer
spec:
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: homer
          image: b4bz/homer:v23.02.2
          ports:
            - name: ingress
              containerPort: 8080
          volumeMounts:
            - name: homer
              mountPath: /www/assets
            - name: config
              mountPath: /www/assets/config.yml
              subPath: config.yaml
      volumes:
        - name: homer
          persistentVolumeClaim:
            claimName: homer
        - name: config
          configMap:
            name: homer
