k8s/applications/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: homer
          image: b4bz/homer:v25.11.1
          ports:
            - name: ingress
              containerPort: 8080
          volumeMounts:
            - name: homer
              mountPath: /www/assets
            - name: config
              mountPath: /www/assets/config.yml
              subPath: config.yaml
      volumes:
        - name: homer
          persistentVolumeClaim:
            claimName: homer
        - name: config
          configMap:
            name: homer
      resources:
        limits:
          memory: 128Mi
        requests:
          cpu: 10m
          memory: 128Mi
